Setting of task files

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,105 @@ brain_sim_comp/brain_sim_comp.sln
 brain_sim_comp/brain_sim_comp.vcxproj
 brain_sim_comp/brain_sim_comp.vcxproj.filters
 brain_sim_comp/brain_sim_comp.vcxproj.user
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Rasterplot.dat
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Potential.dat
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Parameters.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_2_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_2_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_2_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_1_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_1_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_1_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_0_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_0_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_JPotConnectivity_Matrix_0_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_2_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_2_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_2_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_1_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_1_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_1_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_0_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_0_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_DelayConnectivity_Matrix_0_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Data.dat
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Currents.dat
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_2_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_2_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_2_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_1_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_1_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_1_0.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_0_2.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_0_1.txt
+NeuralNetworkCode/Test4_2022_10_25_16-47-58/Test4_Connectivity_Matrix_0_0.txt
+NeuralNetworkCode/ParameterOptions.txt
+NeuralNetworkCode/brain_sim_comp.exe
+brain_sim_comp/x64/Release/WhiteNoiseStimulus.obj
+brain_sim_comp/x64/Release/WhiteNoiseRescaled.obj
+brain_sim_comp/x64/Release/WhiteNoiseLinear.obj
+brain_sim_comp/x64/Release/vc143.pdb
+brain_sim_comp/x64/Release/UncorrelatedPoissonLikeStimulus.obj
+brain_sim_comp/x64/Release/SynapseSample.obj
+brain_sim_comp/x64/Release/Synapse.obj
+brain_sim_comp/x64/Release/Stimulus.obj
+brain_sim_comp/x64/Release/SpatialPoissonStimulus.obj
+brain_sim_comp/x64/Release/SpatialGaussianStimulus.obj
+brain_sim_comp/x64/Release/Recorder.obj
+brain_sim_comp/x64/Release/RandomConnectivity.obj
+brain_sim_comp/x64/Release/QIFNeuronPop.obj
+brain_sim_comp/x64/Release/PRGSynapseContinuous.obj
+brain_sim_comp/x64/Release/PowerLawSynapse.obj
+brain_sim_comp/x64/Release/PoissonNeuronPop.obj
+brain_sim_comp/x64/Release/NeuronPopSample.obj
+brain_sim_comp/x64/Release/NeuronPop.obj
+brain_sim_comp/x64/Release/NeuralNetwork.obj
+brain_sim_comp/x64/Release/MongilloSynapseContinuous.obj
+brain_sim_comp/x64/Release/MongilloSynapse.obj
+brain_sim_comp/x64/Release/main.obj
+brain_sim_comp/x64/Release/LIFNeuronPop.obj
+brain_sim_comp/x64/Release/IndividualRandomConnectivity.obj
+brain_sim_comp/x64/Release/GlobalFunctions.obj
+brain_sim_comp/x64/Release/ExponentialCurrentSynapse.obj
+brain_sim_comp/x64/Release/EIFNeuronPop.obj
+brain_sim_comp/x64/Release/DistanceConnectivity.obj
+brain_sim_comp/x64/Release/CurrentSynapse.obj
+brain_sim_comp/x64/Release/Connectivity.obj
+brain_sim_comp/x64/Release/brain_sim_comp.vcxproj.FileListAbsolute.txt
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/link.write.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/link.read.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/link.command.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/CL.write.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/CL.read.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/CL.command.1.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/brain_sim_comp.write.1u.tlog
+brain_sim_comp/x64/Release/brain_sim_comp.tlog/brain_sim_comp.lastbuildstate
+brain_sim_comp/x64/Release/brain_sim_comp.pdb
+brain_sim_comp/x64/Release/brain_sim_comp.log
+brain_sim_comp/x64/Release/brain_sim_comp.ipdb
+brain_sim_comp/x64/Release/brain_sim_comp.iobj
+brain_sim_comp/x64/Release/brain_sim_comp.exe.recipe
+brain_sim_comp/x64/Release/BinaryRandomConnectivity.obj
+brain_sim_comp/x64/Release/AdvancedRecorder.obj
+brain_sim_comp/.vs/brain_sim_comp/v17/ipch/AutoPCH/b610538a7bfcf824/MAIN.ipch
+brain_sim_comp/.vs/brain_sim_comp/v17/Browse.VC.opendb
+brain_sim_comp/.vs/brain_sim_comp/v17/Browse.VC.db-wal
+brain_sim_comp/.vs/brain_sim_comp/v17/Browse.VC.db-shm
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/read.lock
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/c93089ff-ede5-4922-91e0-1d23bf8057d9.vsidx
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/92296a15-24f6-4dfd-b4e8-122cacc0b92f.vsidx
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/5251cfe4-82df-41d6-86e5-c66b6d856213.vsidx
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/50c30035-cfbd-4401-aee9-c6a51599c66b.vsidx
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
+NeuralNetworkCode/ParameterOptions.txt
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/64b4d193-9335-4217-918a-fcbb5cc7cbbf.vsidx
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/c08f5997-1560-4cc8-a93b-635a19e7514d.vsidx
+*.vsidx
+NeuralNetworkCode/ParameterOptions.txt
+NeuralNetworkCode/ParameterOptions.txt
+*.txt
+.vs/VSWorkspaceState.json
+brain_sim_comp/.vs/brain_sim_comp/v17/ipch/AutoPCH/eb6f776de106bb89/EIFNEURONPOP.ipch
+NeuralNetworkCode/ParameterOptions.txt
+NeuralNetworkCode/ParameterOptions.txt
