Global functions finished (temp)

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,15 @@ NeuralNetworkCode/ParameterOptions.txt
 brain_sim_comp/.vs/brain_sim_comp/v17/ipch/AutoPCH/eb6f776de106bb89/EIFNEURONPOP.ipch
 NeuralNetworkCode/ParameterOptions.txt
 NeuralNetworkCode/ParameterOptions.txt
+*.ipch
+*.ipch
+brain_sim_comp/.vs/brain_sim_comp/FileContentIndex/write.lock
+*.ipch
+*.ipch
+*.ipch
+*.ipch
+brain_sim_comp/.vs/brain_sim_comp/v17/ipch/AutoPCH/383219dc65631578/RANDOMCONNECTIVITY.ipch
+brain_sim_comp/.vs/brain_sim_comp/v17/ipch/AutoPCH/6ef9696d14ce2628/CHEMOGFUNCTIONS.ipch
+*.ipch
+*.ipch
+*.ipch
