Commiting mistakes like my life

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,23 @@ InputParameterOptions.txt
 *.json
 *.sqlite
 .vs/slnx.sqlite-journal
+*.sh
+NeuralNetworkCode/.idea/.name
+*.xml
+*.cmake
+*.cbp
+*.pc
+NeuralNetworkCode/cmake-build-debug/_deps/googletest-src/.clang-format
+NeuralNetworkCode/cmake-build-debug/_deps/googletest-src/.github/ISSUE_TEMPLATE/00-bug_report.md
+NeuralNetworkCode/cmake-build-debug/_deps/googletest-src/.github/ISSUE_TEMPLATE/10-feature_request.md
+*.yml
+*.bazel
+NeuralNetworkCode/cmake-build-debug/_deps/googletest-src/CMakeLists.txt
+*.md
+NeuralNetworkCode/cmake-build-debug/_deps/googletest-src/CONTRIBUTORS
+*.html
+*.scss
+*.in
+*.txt
+NeuralNetworkCode/.idea/NeuralNetworkCode.iml
+NeuralNetworkCode/src/Debug/SpikingSim.log
