--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
-#Makefile
+Makefile
 cmake_install.cmake
 install_manifest.txt
 
@@ -23,6 +23,7 @@ install_manifest.txt
 *.slo
 *.lo
 *.o
+main
 
 ### XCode ###
 xcuserdata/
