--- a/NeuralNetworkCode/src/.vscode/settings.json
+++ b/NeuralNetworkCode/src/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "fstream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "memory": "cpp"
     }
 }
